--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<jetty.version>8.1.2.v20120308</jetty.version>
+		<cargo.version>1.2.0</cargo.version>
+		<jackson.version>1.9.6</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -49,5 +52,85 @@
 		</dependency> 
 		<!-- spring -->
 		
+		<!-- jackson -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-lgpl</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-lgpl</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<!-- jackson -->
+		
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<!-- jetty-maven-plugin主要用来帮助日常的快速开发和测试 -->
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+					<stopPort>9999</stopPort>
+					<stopKey>foo</stopKey>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>8080</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- cargo-maven2-plugin主要服务于自动化部署,例如专门的测试人员只需要一条简单的Maven命令,就可以构建项目并部署到Web容器中，然后进行功能测试 
+				cargo-maven2-plugin的groupId是org.codehaus.cargo,这不属于官方的Maven插件groupId,因此用户需要将其添加到settings.xml的plugingGroup元素中以方便命令行调用。 
+				<pluginGroups> <pluginGroup>org.codehaus.cargo</pluginGroup> </pluginGroups> -->
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>${cargo.version}</version>
+				<configuration>
+					<container>
+						<containerId>tomcat6x</containerId>
+						<type>installed</type>
+						<!-- TOMCAT_HOME needs to be defined, e.g. in settings.xml or an environment 
+							variable -->
+						<home>${TOMCAT_HOME}</home>
+					</container>
+					<configuration>
+						<type>standalone</type>
+						<home>${project.build.directory}/tomcat6x</home>
+					</configuration>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
