--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<jetty.version>8.1.2.v20120308</jetty.version>
 		<cargo.version>1.2.0</cargo.version>
 		<jackson.version>1.9.6</jackson.version>
+		<servlet.version>2.5</servlet.version>
+		<jstl.version>1.2</jstl.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -65,6 +67,18 @@
 			<version>${jackson.version}</version>
 		</dependency>
 		<!-- jackson -->
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${servlet.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
 
 	</dependencies>
 
