--- a/pom.xml
+++ b/pom.xml
@@ -161,9 +161,9 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-			<id>ibiblio</id>
-			<name>Maven Repository</name>
-			<url>http://mirrors.ibiblio.org/maven2/</url>
+			<id>central2</id>
+			<name>Maven Repository Switchboard</name>
+			<url>http://repo2.maven.org/maven2</url>
 		</repository>
 	</repositories>
 </project>
