--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 test_case_db_dir=E:/tdc/1.csv
 test_case_head=testCaseName,testCaseContent,testUrl,createDataSql,queryDataSql,deleteDataSql
 
-db_path=D:\\tdc\\src\\main\\resources\\db.accdb
+db_path=D:\\tdc\\tdc\\src\\main\\resources\\db.accdb
 db_pwd=654321
