--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.htmlparser</groupId>
+			<artifactId>htmlparser</artifactId>
+			<version>2.1</version>
+		</dependency>
+      	
+      	<dependency>
+	      	<groupId>org.apache.httpcomponents</groupId>
+	      	<artifactId>httpclient</artifactId>
+	      	<version>4.1.1</version>
+	    </dependency>
 
 	</dependencies>
 
