--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,13 @@
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.171</version>
+		</dependency>
+            
 	</dependencies> 
 	
 	<build>
