--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.171</version>
 		</dependency>
+		
+		<dependency>
+		  	<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+		  	<groupId>org.jsoup</groupId>
+		  	<artifactId>jsoup</artifactId>
+		  	<version>1.7.2</version>
+		</dependency>
             
 	</dependencies> 
 	
