--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<session-timeout>30</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>/html/index.html</welcome-file>
 	</welcome-file-list>
 	
 	<context-param>
