--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,12 @@
 		  	<artifactId>jsoup</artifactId>
 		  	<version>1.7.2</version>
 		</dependency>
-            
+        
+        <dependency>
+			<groupId>rome</groupId>
+			<artifactId>rome</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies> 
 	
 	<build>
