--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,25 @@
 			<artifactId>rome</artifactId>
 			<version>1.0</version>
 		</dependency>
+		
+		<!-- 自动化工具 -->
+		<dependency>
+	        <groupId>org.seleniumhq.selenium</groupId>
+	        <artifactId>selenium-java</artifactId>
+	        <version>2.42.2</version>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.seleniumhq.selenium</groupId>
+	        <artifactId>selenium-firefox-driver</artifactId>
+	        <version>2.42.2</version>
+	    </dependency>
+	    
+	    <dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-chrome-driver</artifactId>
+			<version>2.42.2</version>
+		</dependency>
 	</dependencies> 
 	
 	<build>
