--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>net.sf.supercsv</groupId>
-			<artifactId>super-csv</artifactId>
-			<version>2.0.1</version>
-		</dependency>
 
 		<!-- spring -->
 		<dependency>
@@ -47,12 +42,7 @@
 			<version>3.1.1.RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>3.1.1.RELEASE</version>
-			<scope>compile</scope>
-		</dependency>
+
 		<!-- spring -->
 
 		<!-- jackson -->
@@ -80,72 +70,66 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.htmlparser</groupId>
-			<artifactId>htmlparser</artifactId>
-			<version>2.1</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>tools</artifactId>
-					<groupId>com.sun</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-      	
-      	<dependency>
-	      	<groupId>org.apache.httpcomponents</groupId>
-	      	<artifactId>httpclient</artifactId>
-	      	<version>4.1.1</version>
-	    </dependency>
 	    
 	    <dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.171</version>
-		</dependency>
-		
-		<dependency>
-		  	<!-- jsoup HTML parser library @ http://jsoup.org/ -->
-		  	<groupId>org.jsoup</groupId>
-		  	<artifactId>jsoup</artifactId>
-		  	<version>1.7.2</version>
-		</dependency>
-        
-        <dependency>
-			<groupId>rome</groupId>
-			<artifactId>rome</artifactId>
-			<version>1.0</version>
-		</dependency>
-		
-		<!-- 自动化工具 -->
-		<dependency>
-	        <groupId>org.seleniumhq.selenium</groupId>
-	        <artifactId>selenium-java</artifactId>
-	        <version>2.42.2</version>
-	    </dependency>
-	    
-	    <dependency>
-	        <groupId>org.seleniumhq.selenium</groupId>
-	        <artifactId>selenium-firefox-driver</artifactId>
-	        <version>2.42.2</version>
-	    </dependency>
-	    
-	    <dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-chrome-driver</artifactId>
-			<version>2.42.2</version>
-		</dependency>
+
 	</dependencies> 
 	
 	<build>
 		<plugins>
+			<plugin>
+			    <groupId>net.sf.alchim</groupId>
+			    <artifactId>winstone-maven-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>embed</goal>
+			            </goals>
+			            <phase>package</phase>
+			        </execution>
+			    </executions>
+			</plugin>
+			<plugin>
+			    <groupId>net.sf.alchim</groupId>
+			    <artifactId>winstone-maven-plugin</artifactId>
+			    <version>1.2</version>
+			    <configuration>
+			        <cmdLineOptions>
+			            <property>
+			                <name>httpPort</name>
+			                <value>8080</value>
+			            </property>
+			            <property>
+			                <name>ajp13Port</name>
+			                <value>-1</value>
+			            </property>
+			            <property>
+			                <name>controlPort</name>
+			                <value>-1</value>
+			            </property>
+			            <property>
+			                <name>directoryListings</name>
+			                <value>false</value>
+			            </property>
+			            <property>
+			                <name>useInvoker</name>
+			                <value>false</value>
+			            </property>
+			        </cmdLineOptions>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>embed</goal>
+			            </goals>
+			            <phase>package</phase>
+			        </execution>
+			    </executions>
+			</plugin>
 			<!-- jetty-maven-plugin主要用来帮助日常的快速开发和测试 -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
