modify chrome plugin icon

--- a/chrome_plugin/sync_browser/manifest.json
+++ b/chrome_plugin/sync_browser/manifest.json
@@ -1,15 +1,18 @@
-﻿{
+{
 	"name": "终端浏览器同步工具",
 	"manifest_version": 2,
 	"version": "1.0",
 	"description": "终端浏览器同步工具",
 	"browser_action": {
-		"default_icon": "icon.gif"
+		"default_icon": "start.jpg"
 	},
 	"permissions": [
 	"http://*/*",
     "tabs"
 	],
+	"icons": {
+      "32": "start.jpg"
+   	},
 	"background": {
 	  "matches": ["http://*/*"],
       "scripts": [ "jquery.min.js","config.js", "sync.js" ]
