add option page

--- a/chrome_plugin/sync_browser/manifest.json
+++ b/chrome_plugin/sync_browser/manifest.json
@@ -19,5 +19,6 @@
 	"background": {
 	  "matches": ["http://*/*"],
       "scripts": [ "jquery.min.js","config.js", "sync.js" ]
-    }
+    },
+    "options_page" : "popup.html"
 }
